fixed invisible borders on non-retina displays

--- a/style/layout/_article.scss
+++ b/style/layout/_article.scss
@@ -9,9 +9,7 @@ body {
         backface-visibility: hidden;
         margin-right: -2pt;
         line-height: 1.5em;
-        transform-origin: center center;
-        -webkit-transform-origin: center center;
-        -moz-transform-origin: center center;
+        @include transformOriginCenter;
 
         // EVENTS
 
@@ -237,7 +235,7 @@ body {
                 @include cardStyle;
                 padding: 0;
                 width: $articleSide;
-                min-height: $articleSideNarrow;
+//                 min-height: $articleSideNarrow;
                 position: relative;
                 
                 header {
